Extract css to own file

--- a/src/main/resources/static/error.html
+++ b/src/main/resources/static/error.html
@@ -1,66 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>MotorBesitzen</title>
-    <meta charset="UTF-8">
+    <meta charset="text/html; UTF-8" http-equiv="Content-Type">
     <meta content="dark light" name="color-scheme">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <style>
-        @media (prefers-color-scheme: dark) {
-            body {
-                color: #e1e1e1;
-                background-color: #424242;
-            }
-
-            footer {
-                color: #e1e1e1;
-                background-color: #272727;
-            }
-        }
-
-        @media (prefers-color-scheme: light) {
-            body {
-                color: #424242;
-                background-color: #e1e1e1;
-            }
-
-            footer {
-                color: #e1e1e1;
-                background-color: #424242;
-            }
-        }
-
-        a {
-            color: #0777f2;
-        }
-
-        a:visited {
-            color: #c11deb;
-        }
-
-        footer {
-            position: fixed;
-            width: 100%;
-            left: 0;
-            bottom: 0;
-            text-align: center;
-            align-content: center;
-            padding: 0.5em;
-        }
-
-        .content {
-            position: fixed;
-            top: 45%;
-            left: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-        }
-
-        .product {
-            display: inline-block;
-            margin-left: 1em;
-            margin-right: 1em;
-            line-height: 0;
-        }
-    </style>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="content">
